--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: "DSD Release"
 description: "Releases your DSD Design Systems"
+branding:
+  icon: 'send'  
+  color: 'purple'
 inputs:
   api-token:
     description: "DSD API token - can be generated from https://design-systems.dev"
